[tool.poetry]
name = "linedebugger"
version = "0.1.0"
description = ""
authors = ["AEJaspan <adam.jaspan@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.26.0"
weaviate-client = "^4.9.3"
sentence-transformers = "^3.3.1"
python-dotenv = "^1.0.1"
openai = "^1.54.4"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
linedebugger = "linedebugger.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
#[tool.pytest.ini_options]
#addopts = [
#    "--cov=.",
#    "--cov-report=term-missing",
#    "--cov-report=html",
#    "--cov-config=.coveragerc",
#]

[tool.pylint.main]
jobs = 4
output-format = "colorized"
reports = true
score = true
exit-zero = true

[tool.pylint.master]
jobs = 4
output-format = "colorized"
reports = true
score = true
exit-zero = true

[tool.pylint.typecheck]
generated-members = "__*__"
